# bot-finance-backend

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 1acd52cbe3d6_create_account_table.py  1e9d39cf639e_create_user_account_openfinance_and_.py  2766a631b46e_change_enum_of_status_property_from_.py  4a442c9258ee_create_open_finance_connection_table.py  6c0ff4e2cb07_add_email_field_to_user.py  7660541f91a0_change_email_to_not_null.py  859b9bd40a77_add_user_account_relationship.py  8f3c4d2e1a5b_create_payable_and_receivable_tables.py  e36dcd2264b7_create_transaction_table.py  ed5f90b45285_add_relationship_with_user_table_to_.py  f0c5ddd1d904_update_column_type_of_date_in_.py  f7b0884c0c6d_create_table_users.py
api/: main.py
api/database/: config.py
api/functions/: auth.py  connect-token.py  email.py  llm_chat.py  open_finance_account.py  open_finance_item.py  open_finance_transactions.py  security.py
api/models/: __init__.py  account.py  financial.py  open_finance_connection.py  transaction.py  user.py
api/routes/: auth.py  financial.py  llm_chat.py  open-finance-connection.py  open_finance_account.py  open_finance_item.py  open_finance_transactions.py
api/schemas/: account.py  chat.py  financial.py  open_finance.py  paged_response.py  pluggy_account_response.py  pluggy_transaction_response.py  token.py  transaction.py  user.py
api/tests/: open_finance_transactions_tests.py
